<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.google.counselling.BlogList"
    tools:showIn="@layout/app_bar_blog_list">

    <TextView
        android:id="@+id/human"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_4"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/love"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/awareness"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:text="@string/category_1"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/burningIssues"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/burningIssues"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:background="#80000000"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_2"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/counsel"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/counsel"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="20dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_3"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/human"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/love"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:background="#80000000"
        android:padding="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_5"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.501" />

    <TextView
        android:id="@+id/laughter"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_6"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/love" />

    <TextView
        android:id="@+id/personality"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_7"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laughter" />

    <TextView
        android:id="@+id/psychology"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:background="#80000000"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_8"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personality" />

    <TextView
        android:id="@+id/uncategorized"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="0dp"
        android:background="#80000000"
        android:paddingBottom="15dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:text="@string/category_9"
        android:textColor="#FFF"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/psychology" />
</android.support.constraint.ConstraintLayout>
