<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.google.counselling.Counsellor"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/app_bar_counsellor">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/counsellorHeading"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/prompt_name"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:ems="10"
        android:hint="@string/prompt_address"
        android:inputType="textPersonName"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Email" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/prompt_phone_number"
        android:inputType="phone"
        android:textColor="#FFF"
        android:textColorHint="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/Address" />

    <TextView
        android:id="@+id/TnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Terms and Condtition"
        android:textColor="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/acceptance"
        android:textColor="#FFF"
        app:buttonTint="#FFF"
        app:layout_constraintLeft_toLeftOf="@+id/heading"
        app:layout_constraintTop_toBottomOf="@+id/TnC" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="#80000000"
        android:text="@string/submit"
        android:textColor="#FFF"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        android:layout_marginLeft="150dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
